--- a/Welding/.vscode/settings.json
+++ b/Welding/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\haako\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "C:\\Users\\lera_\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
